--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <header>
                 <div class="logo">
                     <a href="#">
-                        
+                        <img src="assets/img/tenis-logo-bg.png" alt="">
                     </a>
+                    <h1>Be<span>fit</span></h1>
                 </div>
             </header>
         </section>
